# pyqml-lab

./: .gitignore  LICENSE  README.md  build-base.sh  publish-base.sh  pyproject.toml  run.sh
config/: .env.example  base.Dockerfile  dev.sh  entrypoint.sh  jupyter_lab_config.py  jupyter_server_config.py  lab.Dockerfile
notebooks/: .gitignore  qbn-tam.ipynb
