[tool.poetry]
name = "pyqml-lab"
version = "0.1.0"
description = ""
authors = ["Dr. Frank Zickert <mail@pyqml.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
jupyterlab-git = "^0.50.1"
jupyterlab = "^4.3.5"
qiskit = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
