[tool.poetry]
name = "pyqml-lab"
version = "0.1.0"
description = ""
authors = ["Dr. Frank Zickert <mail@pyqml.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
jupyterlab-git = "^0.50.1"
jupyterlab = "^4.4.1"
qiskit = "^2.0.0"
qiskit-aer = "^0.17.0"
qiskit-algorithms = "^0.3.1"
qiskit-finance = "^0.4.1"
qiskit-ibm-runtime = "^0.38.0"
qiskit-machine-learning = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
